--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native": "^7.1.13",
+    "@react-navigation/native-stack": "^7.3.18",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-linear-gradient": "^2.8.3",
